--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.4.2",
+    "react": "^15.4.2",
     "react-native": "0.41.2",
-    "react-native-svg": "^5.1.5"
+    "react-native-svg": "^5.1.5",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-watch": "^1.1.1"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
