--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ android/app/libs
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+
+
+##temporary ignores
+app/components/GameScene.js
+app/components/Splash.js
